--- a/Tony/mediaQuery.css
+++ b/Tony/mediaQuery.css
@@ -21,7 +21,6 @@
   #menu {
     position: relative; /* Change position to relative for better positioning on smaller screens */
     display: none; /* Hide menu by default on smaller screens */
-    width: 20%; /* Make the menu full width */
   }
 
   #menu li {
